<resources>
    <string name="app_name">Provence</string>

    <!-- text -->
    <string name="login">Login</string>

    <!-- navigation drawer item labels  -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_trash">Trash</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_feedback">Feedback</string>
    <string name="nav_item_tag">Tag</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_item_bookmark">Bookmark</string>

    <!-- error messages -->
    <string name="err_msg_user_not_exist">Current User not exist.</string>
    <string name="err_require_email">Email is required.</string>
    <string name="err_require_password">Password is required.</string>
    <string name="err_msg_login_failed">Username or password is mismatch.</string>
    <string name="err_msg_register_failed">Failed to register.</string>

    <!-- hint -->
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>

    <!-- messages -->
    <string name="msg_signup1">Don\'t have account?\t</string>
    <string name="msg_signup2">Sign Up</string>

</resources>
