<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group
        android:checkableBehavior="single"
        android:orderInCategory="100">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_item_tag"
            android:icon="@mipmap/ic_label_black_24dp"
            android:title="@string/nav_item_tag" />
        <item
            android:id="@+id/nav_item_bookmark"
            android:icon="@mipmap/ic_bookmark_black_24dp"
            android:title="@string/nav_item_bookmark" />
        <item
            android:id="@+id/nav_item_trash"
            android:icon="@mipmap/ic_delete_black_24dp"
            android:title="@string/nav_item_trash" />
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/nav_item_settings" />
    </group>
    <group android:orderInCategory="200">
        <item
            android:id="@+id/nav_item_feedback"
            android:icon="@mipmap/ic_feedback_black_24dp"
            android:title="@string/nav_item_feedback" />
        <item
            android:id="@+id/nav_item_help"
            android:icon="@mipmap/ic_help_black_24dp"
            android:title="@string/nav_item_help" />
    </group>


</menu>
